Change "TODO" to "FIXME" - this project is not failing because of recent changes

--- a/serverless-workflow-examples/serverless-workflow-github-showcase/pom.xml
+++ b/serverless-workflow-examples/serverless-workflow-github-showcase/pom.xml
@@ -104,4 +104,4 @@
     <version.com.github.tomakehurst.wiremock>2.33.2</version.com.github.tomakehurst.wiremock>
   </properties>
 </project>
-<!-- TODO -->
+<!-- FIXME -->
